<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <ImageView
        android:src="@drawable/ic_action_name"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:scaleType="center"
        android:background="#ff0b0a5d"
        android:contentDescription="@string/app_name" />

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="355dp"
        android:shrinkColumns="*"
        android:stretchColumns="*"
        android:layout_alignParentLeft="true"
        android:id="@+id/tableLayout">

        <TableRow android:id="@+id/tR_AP">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tV_n_AP"
                android:text="Nombre AP"
                android:layout_column="0"
                android:gravity="center_vertical"
                android:layout_span="2" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/spinner_AP"
                android:layout_column="2"
                android:layout_span="7" />

        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tV_Psw"
                android:text="Contraseña"
                android:layout_column="0"
                android:gravity="center_vertical"
                android:layout_span="3" />

            <EditText
                android:id="@+id/eT_Psw"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:enabled="true"
                android:maxLines="1"
                android:numeric="integer"
                android:editable="false"
                android:layout_column="3"
                android:layout_span="6"
                android:inputType="textPassword"
                android:hint="@string/psw"/>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="AP oculta"
                android:id="@+id/cB_new_AP"
                android:layout_column="0"
                android:checked="false"
                android:layout_span="4" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Show psw"
                android:id="@+id/cB_show_pswd"
                android:layout_column="4"
                android:checked="false"
                android:layout_span="5" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tV_IP"
                android:text="IP"
                android:layout_column="0"
                android:enabled="false" />

            <EditText
                android:id="@+id/eT_IP_1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:lines="1"
                android:inputType="number"
                android:singleLine="true"
                android:gravity="center_vertical|center_horizontal"
                android:layout_column="1"
                android:maxLength="3"
                android:enabled="false"
                android:layout_span="2"
                android:hint="@string/ip"/>

            <EditText
                android:id="@+id/eT_IP_2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:lines="1"
                android:inputType="number"
                android:singleLine="true"
                android:gravity="center_vertical|center_horizontal"
                android:layout_column="3"
                android:maxLength="3"
                android:enabled="false"
                android:layout_span="2"
                android:hint="@string/ip"/>

            <EditText
                android:id="@+id/eT_IP_3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:lines="1"
                android:inputType="number"
                android:singleLine="true"
                android:gravity="center_vertical|center_horizontal"
                android:layout_column="5"
                android:maxLength="3"
                android:enabled="false"
                android:layout_span="2"
                android:hint="@string/ip"/>

            <EditText
                android:id="@+id/eT_IP_4"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:lines="1"
                android:inputType="number"
                android:singleLine="true"
                android:gravity="center_vertical|center_horizontal"
                android:layout_column="7"
                android:maxLength="3"
                android:enabled="false"
                android:layout_span="2"
                android:hint="@string/ip"/>

        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tV_port"
                android:layout_alignParentLeft="true"
                android:text="Port"
                android:layout_column="0"
                android:enabled="false" />

            <EditText
                android:id="@+id/eT_Port"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:maxLength="5"
                android:maxLines="1"
                android:numeric="integer"
                android:editable="false"
                android:layout_column="1"
                android:layout_span="8"
                android:hint="@string/port"/>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/t_periodo"
                android:text="Periodo"
                android:enabled="false"
                android:maxLines="1"
                android:editable="false"
                android:layout_column="0"
                android:gravity="center_vertical"
                android:layout_span="2" />

            <EditText
                android:id="@+id/eT_periodo"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:maxLines="1"
                android:numeric="integer"
                android:editable="false"
                android:layout_column="2"
                android:layout_span="7"
                android:hint="@string/period"
                android:inputType="number" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Connect AP"
                android:id="@+id/b_wifi"
                android:enabled="true"
                android:layout_column="0"
                android:layout_weight="0.59"
                android:layout_span="9" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Connect Server"
                android:id="@+id/b_Serv"
                android:onClick="onClick_Server"
                android:enabled="false"
                android:layout_column="0"
                android:layout_weight="0.53"
                android:layout_span="9" />
        </TableRow>

    </TableLayout>

</LinearLayout>
